--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,12 +9,16 @@ jobs:
     name: Deploy stack to AWS
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout the Repository
+        uses: actions/checkout@v3
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.SECRET_ACCESS_KEY }}
           aws-region: 'eu-west-1'
+      
       - name: Deploy stack
         uses: aws-actions/aws-cloudformation-github-deploy@v1.0.3
         with:
