--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,34 @@
-name: CI
+name: CD
 
 on:
   push:
     branches: ["main"]
 
 jobs:
+  build:
+    name: Build React application
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the Repository
+        uses: actions/checkout@v3
+
+      - name: Use node
+        uses: actions/setup-node@v3
+
+      - name: Install dependencies
+        working-directory: ./client
+        run: npm install
+      
+      - name: Build application
+        working-directory: ./client
+        run: npm run build
+      
+      - name: Share artifact inside workflow
+        uses: actions/upload-artifact@v1
+        with:
+          name: application-build
+          path: build
+
   deploy:
     name: Deploy stack to AWS
     runs-on: ubuntu-latest
