--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: application-build
-          path: build
+          path: ./client/build
 
   deploy:
     name: Deploy stack to AWS
