Added sync to s3 so it uploads react changes

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,11 @@ jobs:
     name: Deploy stack to AWS
     runs-on: ubuntu-latest
     steps:
+      - name: Get build
+        uses: actions/download-artifact@v1
+        with:
+          name: application-build
+
       - name: Checkout the Repository
         uses: actions/checkout@v3
 
@@ -49,6 +54,11 @@ jobs:
           name: MyStackerino
           template: cloudformation.yml
           no-fail-on-empty-changeset: "1"
+
+      - name: Deploy to S3
+        run: aws s3 sync . s3://react-github-actions --acl public-read
+        working-directory: application-build
+
 
 
 
