Added a requirement for the deploy to job to wait for build to finish

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
           path: ./client/build
 
   deploy:
+    needs: build
     name: Deploy stack to AWS
     runs-on: ubuntu-latest
     steps:
