--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,7 @@ jobs:
 
       - name: Deploy to S3
         run: aws s3 sync . s3://react-github-actions --acl public-read
-        working-directory: build
+        working-directory: client/build
 
 
 
